--- a/msavaliadorcredito/src/main/resources/application.yml
+++ b/msavaliadorcredito/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: msavaliadorcredito
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   port: 0
 
@@ -10,3 +16,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+mq:
+  queues:
+    emissao-cartoes: emissao-cartoes
